--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "@hexlet/code",
   "version": "0.0.1",
   "description": "Node.js boilerplate package",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +9,9 @@
     "brain-games": "bin/brain-games.js"
   },
   "author": "Konstantin Kolmakov",
-  "license": "ISC"
-
+  "license": "ISC",
+  "type": "module",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
