--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hexlet/code",
-  "version": "0.6.0",
-  "description": "Node.js boilerplate package",
+  "version": "1.0.0",
+  "description": "The Brain Games",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
